Support analyzing bundle size

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "~4.1.5"
   },
   "scripts": {
+    "analyze": "react-scripts build && source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "source-map-explorer": "^2.5.2"
   }
 }
