--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "http-proxy-middleware": "^2.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^8.0.2",
+    "react-markdown-editor-lite": "^1.3.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "remark-gfm": "^3.0.1",
     "sass": "^1.49.9",
     "typescript": "~4.1.5"
   },
