--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,5 @@
-# api url to proxy requests from react app to backend api server(used inside setupProxy.js)
-REACT_APP_PROXY_API_URL=http://localhost:8080
+# api url to proxy requests from react app to heroku api server(used inside setupProxy.js)
+REACT_APP_PROXY_API_URL=https://batnoter-staging.herokuapp.com
+
+# in case you have the batnoter api service running locally, you can use it by uncommenting below line
+# REACT_APP_PROXY_API_URL=http://localhost:8080
