Support external api server without proxy

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
-# api url to proxy requests from react app to heroku api server(used inside setupProxy.js)
-REACT_APP_PROXY_API_URL=https://batnoter-staging.herokuapp.com
+# use heroku api server
+REACT_APP_API_SERVER=https://batnoter-staging.herokuapp.com
 
-# in case you have the batnoter api service running locally, you can use it by uncommenting below line
-# REACT_APP_PROXY_API_URL=http://localhost:8080
+# if you are running api server locally, uncomment the below line
+# REACT_APP_API_SERVER=http://localhost:8080
