Use proxy locally to allow same site cookies

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 # use heroku api server
-REACT_APP_API_SERVER=https://batnoter-staging.herokuapp.com
+REACT_APP_PROXY_API_URL=https://batnoter-staging.herokuapp.com
 
-# if you are running api server locally, uncomment the below line
-# REACT_APP_API_SERVER=http://localhost:8080
+# uncomment below line to use localhost api server
+# REACT_APP_PROXY_API_URL=http://localhost:8080
