--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^16.14.24",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.23",
+    "http-proxy-middleware": "^2.0.6",
     "mdi-material-ui": "^7.2.0",
     "mui-modal-provider": "^2.0.0",
     "react": "^17.0.2",
